file (GLOB_RECURSE SRC_FILES *.cpp)

set (RTL_INTERFACE_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/../../include/rtl_interface.h)
set (RTL_INTERFACE_CPP ${CMAKE_CURRENT_SOURCE_DIR}/rtl_interface.cpp)
set (RTL_INTERFACE_WRAPPER_CPP ${CMAKE_CURRENT_SOURCE_DIR}/rtl_interface_wrapper.cpp)
set (RTL_INTERFACE_IMPL_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/../../include/rtl_interface_impl.h)
set (RTL_INTERFACE_SUB_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/../../include/rtl_interface_sub.h)
set (RTL_INTERFACE_FUNCTIONS_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/../../include/rtl_interface_functions.h)
set (GEN_IMPL_PY gen_impl.py)
set (GEN_SUB_PY gen_sub.py)
set (GEN_WRAPPER_PY gen_wrapper.py)

add_custom_command (
    OUTPUT ${RTL_INTERFACE_IMPL_HEADER}
	COMMAND ${PYTHON_EXE} ${GEN_IMPL_PY} < ${RTL_INTERFACE_FUNCTIONS_HEADER} > ${RTL_INTERFACE_IMPL_HEADER}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DEPENDS ${RTL_INTERFACE_FUNCTIONS_HEADER} ${GEN_IMPL_PY}
    )
add_custom_target (gen_impl DEPENDS ${RTL_INTERFACE_IMPL_HEADER})

add_custom_command (
    OUTPUT ${RTL_INTERFACE_SUB_HEADER}
	COMMAND ${PYTHON_EXE} ${GEN_SUB_PY} < ${RTL_INTERFACE_FUNCTIONS_HEADER} > ${RTL_INTERFACE_SUB_HEADER}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DEPENDS ${RTL_INTERFACE_FUNCTIONS_HEADER} ${GEN_SUB_PY}
    )
add_custom_target (gen_sub DEPENDS ${RTL_INTERFACE_SUB_HEADER})

add_custom_command (
    OUTPUT ${RTL_INTERFACE_WRAPPER_CPP}
	COMMAND ${PYTHON_EXE} ${GEN_WRAPPER_PY} < ${RTL_INTERFACE_FUNCTIONS_HEADER} > ${RTL_INTERFACE_WRAPPER_CPP}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DEPENDS ${RTL_INTERFACE_FUNCTIONS_HEADER} ${GEN_WRAPPER_PY}
    )
add_custom_target (gen_wrapper DEPENDS ${RTL_INTERFACE_WRAPPER_CPP})

set (SRC_FILES ${SRC_FILES} ${RTL_INTERFACE_WRAPPER_CPP})
list (REMOVE_DUPLICATES SRC_FILES)
add_library (utility ${SRC_FILES})
add_dependencies (utility gen_impl gen_sub gen_wrapper)
